between the PSF and data images) to avoid conflict with photometry's
expand interpolating factor.


*****  Sat Nov  4 11:59:41 CET 2017  *****

Added some extra information about the Spitzer bad-pixel-mask bits,
still not completely sure it's the right one.


*****  Sun Nov 12 20:47:00 CET 2017  *****

Revampled spitzer.py to handle time stamps with astropy.time objects
for the ephtime and fp.time values.  This simplifies the light
travel time corrections, bjd-utc corrections, phase calculation.
The pipeline now takes the spacecraft location from the headers
instead of the horizons file.
All of these calculation are now in Spitzer.py rather than after
the photometry step.

Also, revamped the main object's FrameParameter from 2D into 1D.
This commit breaks all further steps of the pipeline.


*****  Sat Nov 18 22:09:59 CET 2017  *****

Adapted pup_badpix.py to the new data shape.

*****

Adapted pup_centering.py to the new data shape.


*****  Sun Nov 26 11:29:16 CET 2017  *****

Moved telemetry frame parameters into its own subclass.

*****

Adapted pup_photom.py to the new data shape.

*****

Added new plots module, to make plots (duh!).
Implemented YX plot vs. phase for centering.

*****

Added stats calculations at the end of pup_centering.py to print
means, median, std, and RMS.  Also make yx plots.


*****  Sun Dec 10 16:29:52 CET 2017  *****

Added MC3 submodule.

*****

Added background() and rawflux() to plots module.
Generate raw flux and background plots at the end of pup_photom.py.


*****  Sun Jan 28 17:56:23 CET 2018  *****

Added models module with lightcurve models.
Added linramp(), mandelecl(), and bliss() light-curve models.
TBD: Need to doublecheck bliss model works.


*****  So 18. Feb 18:21:45 CET 2018  *****

Implemented linramp, quadramp, expramp, mandelecl, mandeltr, and bliss
light-curve models.

*****

Added tools.cat(), a shorthand for numpy concatenate.
Removed tools.parray().

*****
